--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eIY-Me-YIN">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -693,10 +692,10 @@
             </objects>
             <point key="canvasLocation" x="6304" y="117"/>
         </scene>
-        <!--Events Detail View Controller-->
+        <!--Event Detail View Controller-->
         <scene sceneID="Wb8-PU-x6s">
             <objects>
-                <viewController storyboardIdentifier="eventDetail" id="pTW-qw-EgO" customClass="CLEventsDetailViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="eventDetail" id="pTW-qw-EgO" customClass="CLEventDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Eqw-bp-m53"/>
                         <viewControllerLayoutGuide type="bottom" id="Eco-FF-fWP"/>
