--- a/Cooleaf/UI/Main.storyboard
+++ b/Cooleaf/UI/Main.storyboard
@@ -367,7 +367,7 @@
         <!--Profile Table View Controller-->
         <scene sceneID="9ko-oj-kcN">
             <objects>
-                <tableViewController id="0k9-4b-now" customClass="CLProfileTableViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="profile" id="0k9-4b-now" customClass="CLProfileTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="HJB-2N-kio">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
